@@ -328,7 +328,7 @@ public class TextField extends Widget implements Disableable, Styleable<TextFiel
 		batch.setColor(color.r, color.g, color.b, color.a * parentAlpha);
 		float bgLeftWidth = 0, bgRightWidth = 0;
 		if (background != null) {
-			background.draw(batch, x, y, width, height);
+			drawBackground(background, batch, x, y, width, height);
 			bgLeftWidth = background.getLeftWidth();
 			bgRightWidth = background.getRightWidth();
 		}
@@ -377,6 +377,10 @@ public class TextField extends Widget implements Disableable, Styleable<TextFiel
 		return textY;
 	}
 
+	protected void drawBackground (Drawable background, Batch batch, float x, float y, float width, float height) {
+		background.draw(batch, x, y, width, height);
+	}
+
 	/** Draws selection rectangle **/
 	protected void drawSelection (Drawable selection, Batch batch, BitmapFont font, float x, float y) {
 		selection.draw(batch, x + textOffset + selectionX + fontOffset, y - textHeight - font.getDescent(), selectionWidth,
@@ -397,7 +401,7 @@ public class TextField extends Widget implements Disableable, Styleable<TextFiel
 			y - textHeight - font.getDescent(), cursorPatch.getMinWidth(), textHeight);
 	}
 
-	void updateDisplayText () {
+	protected void updateDisplayText () {
 		BitmapFont font = style.font;
 		BitmapFontData data = font.getData();
 		String text = this.text;
